[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets_sprites/background.png" type="Texture" id=1]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=2]
[ext_resource path="res://GROBOLD.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets_audio/gameshow_theme.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets_sprites/menu_button_1.png" type="Texture" id=5]
[ext_resource path="res://assets_audio/menu_buttonc_click.wav" type="AudioStream" id=6]
[ext_resource path="res://fonts/04B_30__.TTF" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Theme_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="btn_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.703125, 0.843585 )
texture = ExtResource( 1 )
centered = false

[node name="Game_name" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -140.0
margin_top = 60.0
margin_right = 135.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 4 )
text = "Quiz Fun Game"

[node name="Game_name2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -138.0
margin_top = 62.0
margin_right = 137.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 4 )
text = "Quiz Fun Game"

[node name="Game_name3" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.0
margin_top = 65.0
margin_right = 140.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 4 )
text = "Quiz Fun Game"

[node name="Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -92.0
margin_right = 156.0
margin_bottom = 153.0
alignment = 1

[node name="btn_start_game" type="Button" parent="Container"]
margin_right = 312.0
margin_bottom = 79.0
focus_neighbour_top = NodePath("../btn_quit_game")
custom_colors/font_color_focus = Color( 0.0823529, 0.823529, 0.0588235, 1 )
custom_colors/font_color_pressed = Color( 0.027451, 0.305882, 0.0941176, 1 )
custom_fonts/font = SubResource( 1 )
text = "Come√ßar (Start)"
icon = ExtResource( 5 )
flat = true
icon_align = 1

[node name="btn_commands" type="Button" parent="Container"]
margin_top = 83.0
margin_right = 312.0
margin_bottom = 162.0
custom_colors/font_color_focus = Color( 0.705882, 0.737255, 0.121569, 1 )
custom_colors/font_color_pressed = Color( 0.533333, 0.560784, 0.0470588, 1 )
custom_fonts/font = SubResource( 2 )
text = "Como Jogar?"
icon = ExtResource( 5 )
flat = true
icon_align = 1

[node name="btn_quit_game" type="Button" parent="Container"]
margin_top = 166.0
margin_right = 312.0
margin_bottom = 245.0
focus_neighbour_bottom = NodePath("../btn_start_game")
custom_colors/font_color_focus = Color( 0.807843, 0.109804, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.4, 0.0352941, 0.0352941, 1 )
custom_fonts/font = SubResource( 3 )
text = "Sair (Quit)"
icon = ExtResource( 5 )
flat = true
icon_align = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Container/btn_start_game" to="." method="_on_btn_start_game_pressed"]
[connection signal="pressed" from="Container/btn_commands" to="." method="_on_btn_commands_pressed"]
[connection signal="pressed" from="Container/btn_quit_game" to="." method="_on_btn_quit_game_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
